--- a/fooddeliverysystem/fooddelivery/src/main/resources/application.properties
+++ b/fooddeliverysystem/fooddelivery/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 # Server
 server.port=8082
 
-# MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/food_delivery_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=rahul
+# H2 Database (for quick testing)
+spring.datasource.url=jdbc:h2:mem:food_delivery;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JWT
 jwt.secret=mySecretKey
