--- a/fooddeliverysystem/fooddelivery/src/main/resources/application.properties
+++ b/fooddeliverysystem/fooddelivery/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-# Server
-server.port=8082
+server.port=2000
 
-# H2 Database (for quick testing)
-spring.datasource.url=jdbc:h2:mem:food_delivery;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
+# MySQL datasource (match backend/db.js)
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://mysqldb:3306/klustudentdb
+spring.datasource.username=root
+spring.datasource.password=docker
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
